@@ -69,6 +69,7 @@ namespace parity
 			utils::Task task;
 			utils::Path parity = getParityExecutable();
 			utils::Environment env("PARITY_CONFIG");
+			utils::Color col(utils::Context::getContext().getColorMode());
 
 			if(conf) {
 				utils::Path cf = utils::Path::getTemporary(".parity.testsuite.XXXXXX.conf");
@@ -110,9 +111,9 @@ namespace parity
 					while((pos = out.find("\n", pos ? pos + 5 : 0)) != std::string::npos)
 						out.replace(pos, 1, "\n   | ");
 
-					utils::Log::verbose("   ---------------------------------------------------\n");
-					utils::Log::verbose(" * parity task stdout:\n");
-					utils::Log::verbose("   +--------------------------------------------------\n");
+					utils::Log::verbose(col.magenta("   ----------------------------------------------------------------------------\n").c_str());
+					utils::Log::verbose(" %s %s:\n", col.cyan("*").c_str(), col.yellow("parity task stdout").c_str());
+					utils::Log::verbose(col.magenta("   ----------------------------------------------------------------------------\n").c_str());
 					utils::Log::verbose("   |\n");
 					utils::Log::verbose("   | ");
 					utils::Log::verbose(out.c_str());
@@ -124,9 +125,9 @@ namespace parity
 					while((pos = err.find("\n", pos ? pos + 5 : 0)) != std::string::npos)
 						err.replace(pos, 1, "\n   | ");
 
-					utils::Log::verbose("   ---------------------------------------------------\n");
-					utils::Log::verbose(" * parity task stderr:\n");
-					utils::Log::verbose("   +--------------------------------------------------\n");
+					utils::Log::verbose(col.magenta("   ----------------------------------------------------------------------------\n").c_str());
+					utils::Log::verbose(" %s %s:\n", col.cyan("*").c_str(), col.yellow("parity task stderr").c_str());
+					utils::Log::verbose(col.magenta("   ----------------------------------------------------------------------------\n").c_str());
 					utils::Log::verbose("   |\n");
 					utils::Log::verbose("   | ");
 					utils::Log::verbose(err.c_str());
